--- a/exam/templates/result.html
+++ b/exam/templates/result.html
@@ -115,7 +115,7 @@
 			<form action="" method="post">
     		{% csrf_token %}
     		<!-- <table> -->
-    			{{Profile.test_score}}
+    			{{score}}
     		<!-- </table> -->
  		</form>
  		</div>
