--- a/register/templates/login.html
+++ b/register/templates/login.html
@@ -117,7 +117,10 @@
         <table>
           {{ form }}
         </table>
-        <p align=center><input type="submit" value="Submit"></p>
+        <p align=center><input type="submit" value="Submit">
+          <br>
+          <br>
+          <a href="../../register" class="button">REGISTER INSTEAD</a></p>
     </form>
     </div>
   </div>
