--- a/register/templates/register.html
+++ b/register/templates/register.html
@@ -117,7 +117,10 @@
     		<table>
     			{{ form }}
     		</table>
-    		<p align=center><input type="submit" value="Submit"></p>
+			<p align=center><input type="submit" value="Submit"><br>
+			<br>
+			<a href="login" class="button">LOGIN INSTEAD</a>
+			</p>
  		</form>
  		</div>
  	</div>
